--- a/car website/src/CSS/Productdetails.css
+++ b/car website/src/CSS/Productdetails.css
@@ -78,4 +78,11 @@ justify-content: center;
 width: 50px;
 height: 100%;
 }
-
+.not-found-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.car-not-found {
+   height: 500px;
+}
